<resources>
    <string name="app_name">Digital Den</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="subscribe">Подписка</string>
    <string name="about_application">О приложении</string>
    <string name="example_name_game">Horizon zero dawn</string>
    <string name="favourite">Избранное</string>
    <string name="distribution">Раздачи</string>
    <string name="main">Главная</string>
    <string name="Buy">Купить</string>
    <string name="card">Карта</string>
    <string name="pay">Оплатить</string>
    <string name="sort">Сортировка</string>
    <string name="steam">Steam</string>
    <string name="egs">EGS</string>
    <string name="gog">GOG</string>
    <string name="about_subscribe">Подписка на приложение открывает доступ к большему количеству цифровых магазинов</string>
    <string name="setting_text">Push-уведомления на акции</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string-array name="genre">
        <item>simulation</item>
        <item>action</item>
        <item>role-playing</item>
        <item>shooter</item>
        <item>strategy</item>
        <item>adventure</item>
        <item>sports</item>
        <item>racing</item>
    </string-array>
</resources>
