<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.profile.ProfileFragment"
    android:background="@color/gray_300">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint_lay"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue_700">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/profile_icon"
            app:civ_border_color="@color/blue_1000"
            app:civ_border_width="2dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/neoneon"
            android:text="@string/profile"
            android:textColor="@color/sea_100"
            android:textSize="15pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_next"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/next"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/central_constraint_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_constraint_lay"
        android:layout_marginTop="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/blue_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subscription_btn"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/image_settings"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:src="@drawable/settings"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/sans_regular"
                android:text="@string/settings"
                android:textColor="@color/sea_100"
                android:textSize="12pt"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_settings"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_settings_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/next"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subscription_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/blue_700"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/about_app_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_btn">

            <ImageView
                android:id="@+id/image_subscription"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:src="@drawable/subscribe"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_subscription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/sans_regular"
                android:text="@string/subscribe"
                android:textColor="@color/sea_100"
                android:textSize="12pt"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_subscription"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_subscription_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/next"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_app_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/blue_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscription_btn">

            <ImageView
                android:id="@+id/image_about_app"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:src="@drawable/about_app"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_about_app"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/sans_regular"
                android:text="@string/about_application"
                android:textColor="@color/sea_100"
                android:textSize="12pt"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/image_about_app"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_about_app_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/next"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.legacy.widget.Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
